GL-10075: try fix full height on tablet mobile

--- a/src/views/student-class/student-class.scss
+++ b/src/views/student-class/student-class.scss
@@ -7,6 +7,7 @@
   grid-template-rows: auto 1fr 30px;
   overflow: hidden;
   position: relative;
+  height: calc(var(--vh, 1vh) * 100);
   @media (min-width: $md) {
     grid-template-rows: auto 1fr auto;
   }
